--- a/BankTransations/Views/Shared/_Layout.cshtml
+++ b/BankTransations/Views/Shared/_Layout.cshtml
@@ -164,7 +164,7 @@
                     <div>
                         <h3 style="font-family:'Arial Rounded MT'">About:</h3>
                         <p style="font-family:'Times New Roman'" class="mb-30 footer-desc">
-                            Bank Transactions web application is user-friendly web app created in ASP.NET Core MVC.
+                            Bank Transactions web application is user-friendly web app created in ASP.NET Core MVC and JQuery.
                             This platform produces facility to user to create, edit and delete bank accounts.
                             Also user can see details of his account and do changes accordingly. This platform also provides the facility to withdraw amount from total amount.
                         </p>
